[gd_scene load_steps=9 format=3 uid="uid://daj0y3enig6ig"]

[ext_resource type="Script" path="res://scenes/ability/axe_ability/axe_ability.gd" id="1_jki8x"]
[ext_resource type="Texture2D" uid="uid://rvcshgbt5dbq" path="res://assets/weapons/double_bladed_axe.png" id="1_sexn2"]
[ext_resource type="Texture2D" uid="uid://cx6bcdyt6pod8" path="res://assets/props/Shadow.png" id="2_ep6nx"]
[ext_resource type="PackedScene" uid="uid://dqo8ia45ytqjm" path="res://scenes/component/hitbox_component.tscn" id="3_mf5jc"]

[sub_resource type="Animation" id="Animation_f33rx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_h432o"]
resource_name = "default"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l8gn8"]
_data = {
"RESET": SubResource("Animation_f33rx"),
"default": SubResource("Animation_h432o")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_2yqbw"]

[node name="AxeAbility" type="Node2D"]
script = ExtResource("1_jki8x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l8gn8")
}
autoplay = "default"

[node name="ShadowSprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.784314)
position = Vector2(0, 11)
rotation = 0.00029629
scale = Vector2(1.75, 1)
texture = ExtResource("2_ep6nx")
offset = Vector2(0, -1)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_sexn2")

[node name="HitboxComponent" parent="." instance=ExtResource("3_mf5jc")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_2yqbw")
